docs: user docs and swagger auth
